refactor: eliminate DTOs completely across backend, adopting direct entity and MVC layer flow